# vitvqganvae

./: .gitignore  LICENSE  README.md  compose-up.sh  docker-compose.yaml  main.py  pyproject.toml  setup.sh  test.sh  upload.py
acc_config/fsdp/: mg_2_non_former.yaml
acc_config/mgfsdp/: mg_4_non_former.yaml  mgfsdp_4_non_former.yaml
config/: celeba128_vqvae_grvq.yaml  celeba128_vqvae_rvq.yaml  celeba_vqvae.yaml  celeba_vqvae_grvq.yaml  celeba_vqvae_mhvq.yaml  celeba_vqvae_rvq.yaml  cifar10_vqvae.yaml  cifar10_vqvae_lfq.yaml  cifar10_vqvae_mhvq.yaml  cifar10_vqvae_rpq.yaml  cifar10_vqvae_rvq.yaml  cifar10_vqvae_svq.yaml
config/dev/: cifar10_vqvae.yaml  cifar10_vqvae_lfq.yaml
config/img/celeba/: celeba_vitvqvae.yaml  (+4 more)
config/pointcloud/: ellipsoid_1024_vqvae_mhvq.yaml  mesh500_1024_vqvae_mhvq.yaml
deploy/: celeba128_vqvae_grvq.yaml  celeba128_vqvae_mhvq.yaml  celeba128_vqvae_rvq.yaml  celeba_vqvae.yaml  celeba_vqvae_grvq.yaml  celeba_vqvae_mhvq.yaml  celeba_vqvae_multi_gpu.yaml  celeba_vqvae_multi_gpu_2.yaml  celeba_vqvae_multi_gpu_4.yaml  celeba_vqvae_rvq.yaml  cifar10_vqvae.yaml  cifar10_vqvae_rvq.yaml
deploy/dev/: celeba_vqvae_multi_gpu_2_no_cp_no_img.yaml  celeba_vqvae_multi_gpu_4_no_cp_no_img.yaml  celeba_vqvae_no_cp_no_img.yaml
deploy/helpers/: upload.yaml
deploy/mg/: celeba_vqvae_mg_2.yaml
deploy/mgfsdp/: celeba128_vqvae_mhvq_mg_2.yaml
deploy/pointcloud/: mesh500_1024_vqvae_mhvq.yaml
docker/: celeba.dockerfile  celeba128_vqvae_rvq.dockerfile  celeba_vqvae.dockerfile  celeba_vqvae_mhvq.dockerfile  celeba_vqvae_rvq.dockerfile  cifar10.dockerfile  cifar10_dev.dockerfile  cifar10_vqvae_grvq.dockerfile  cifar10_vqvae_lfq.dockerfile  cifar10_vqvae_mhvq.dockerfile  cifar10_vqvae_rpq.dockerfile  cifar10_vqvae_rvq.dockerfile  cifar10_vqvae_svq.dockerfile  ffhq256_vqvae_mhvq.dockerfile
docker/dev/: cifar10_vqvae_dev.dockerfile
docker/pointcloud/: ellipsoid_1024_vqvae_mhvq.dockerfile  mesh500_1024_vqvae_mhvq.dockerfile
docs/md/: DATA.md
helpers/: sample_from_trial.py  sample_img.py  sample_pc.py  upload.py
sidetasks/: sample.py  sample_from_trial.py
vitvqganvae/: __init__.py
vitvqganvae/data/: __init__.py  utils.py
vitvqganvae/model/: __init__.py  utils.py
vitvqganvae/trainer/: __init__.py  pcvqvae.py  utils.py  vqvae.py  vqvae2d.py
vitvqganvae/utils/: config.py  helpers.py
(+154 files in other folders)
