[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.10", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vitvqganvae"
version = "0.0.7"
authors = [
  { name="KhoiDOO", email="khoido8899@gmail.com" }, # Replace with your actual name and email
]
description = "VITVQGANVAE"
readme = "README.md" # Create a README.md file later
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "beartype==0.21.0",
  "einops==0.8.1",
  "vector-quantize-pytorch==1.23.1",
  "accelerate==1.10.0",
  "pytorch_custom_utils==0.0.21",
  "ema_pytorch==0.7.7",
  "pytorch_warmup==0.2.0",
  "torchinfo==1.8.0"
]

[project.urls]
"Homepage" = "https://github.com/KhoiDOO/vitvqganvae" # Replace with your project URL
"Bug Tracker" = "https://github.com/KhoiDOO/vitvqganvae/issues" # Replace with your bug tracker URL